Changelog starting with version 0.4-dev. Prior to the 0.4 branch the project was a spaghetti
code that was hardly worth tracking.


Reference Point for the 0.4 branch is commit 33ed807f7b8207819830998ee6a9269fb190adea.


CHANGELOG

Version 0.4-dev